Fix ModernDark Card Alignment
Fix position from absolute to fixed, so it moves with the viewport when horizonally scrolling. 

Fix card top border due to changing position, adjust top border px to 82px

--- a/client/components/boards/boardColors.css
+++ b/client/components/boards/boardColors.css
@@ -1920,7 +1920,7 @@
 @media screen and (min-width: 801px) {
   .board-color-moderndark .card-details {
     position: fixed;
-    top: 30px;
+    top: 82px;
     left: calc(50% - 384px);
     width: 768px;
     max-height: calc(100% - 60px);
